# openagentmail

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: config.ts  index.ts
backend/src/middleware/: auth.ts  validation.ts
backend/src/routes/: domains.ts  drafts.ts  inboxes.ts  messages.ts  organization.ts  pods.ts  webhooks.ts
backend/src/services/: email.ts  pagination.ts  webhook.ts
backend/src/types/: index.ts
docs/: API.md  ARCHITECTURE.md  CONCEPTS.md  GETTING_STARTED.md  OPENAPI.yaml  RESEARCH.md  SES_SETUP.md
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/examples/: create_inbox.py  send_message.py  webhooks.py
sdks/python/openagentmail/: __init__.py  client.py  errors.py  types.py
sdks/python/openagentmail/_utils/: __init__.py  http.py  pagination.py
sdks/python/openagentmail/resources/: __init__.py  domains.py  drafts.py  inboxes.py  messages.py  pods.py  webhooks.py
sdks/python/tests/: __init__.py  test_client.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/examples/: create_inbox.rs  send_message.rs  webhooks.rs
sdks/rust/src/: client.rs  error.rs  lib.rs  types.rs
sdks/rust/src/resources/: domains.rs  drafts.rs  inboxes.rs  messages.rs  mod.rs  organization.rs  pods.rs  webhooks.rs
sdks/rust/src/utils/: mod.rs  pagination.rs
sdks/typescript/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/examples/: create-inbox.ts  send-message.ts  webhooks.ts
sdks/typescript/src/: client.ts  errors.ts  index.ts  types.ts
sdks/typescript/src/resources/: domains.ts  drafts.ts  inboxes.ts  messages.ts  pods.ts  webhooks.ts
sdks/typescript/src/utils/: http.ts  pagination.ts
