[package]
name = "openagentmail"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for OpenAgentMail - an open-source email API for AI agents"
license = "MIT"
repository = "https://github.com/openagentmail/openagentmail-rs"
documentation = "https://docs.rs/openagentmail"
readme = "README.md"
keywords = ["email", "api", "ai", "agents", "openagentmail"]
categories = ["api-bindings", "email", "asynchronous"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-stream = "0.3"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "create_inbox"
path = "examples/create_inbox.rs"

[[example]]
name = "send_message"
path = "examples/send_message.rs"

[[example]]
name = "webhooks"
path = "examples/webhooks.rs"
